Cleaning en tête et valeurs
Cleaning en tête et valeurs

--- a/world_happiness/explo.ipynb
+++ b/world_happiness/explo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "a0daa229",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\w'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "C:\\Users\\viole\\AppData\\Local\\Temp\\ipykernel_18848\\1077145633.py:2: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "C:\\Users\\viole\\AppData\\Local\\Temp\\ipykernel_20716\\1077145633.py:2: SyntaxWarning: invalid escape sequence '\\w'\n",
       "  df=pd.read_csv(\"world_happiness\\world-happiness-report.csv\")\n"
      ]
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "c6c64f07",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "05c529e8",
    "metadata": {},
    "outputs": [
@@ -430,13 +430,66 @@
        "14      -0.172                      0.726            0.648            0.300  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7cc41f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df.columns = df.columns.str.strip()\n",
+    "df=df.rename(columns={\"Country name\":\"country_name\",\n",
+    "                   \"Life Ladder\":\"life_ladder\",\n",
+    "                   \"Log GDP per capita\":\"log_GDP_per_capita\",\n",
+    "                   \"Social support\":\"social_support\", \n",
+    "                   \"Healthy life expectancy at birth\":\"healthy_life_expectancy_at_birth\",\n",
+    "                    \"Freedom to make life choices\":\"freedom_to make_life_choices\",\n",
+    "                    \"Generosity\":\"generosity\",\n",
+    "                    \"Perceptions of corruption\":\"perceptions_of_corruption\",\n",
+    "                    \"Positive affect\":\"positive_affect\",\n",
+    "                    \"Negative affect\"  :\"negative_affect\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "244b3a51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)\n",
+    "df.dropna(subset=[\"country_name\"], inplace=True)\n",
+    "df[\"country_name\"] = df[\"country_name\"].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "62604217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\viole\\AppData\\Local\\Temp\\ipykernel_20716\\1277559549.py:1: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.apply(pd.to_numeric, errors='ignore')"
    ]
   }
  ],
